Fixed landing page overflow bug

--- a/public/static/css/app.css
+++ b/public/static/css/app.css
@@ -11488,11 +11488,15 @@ footer {
 #landing-title {
   font-family: sans-serif;
   text-align: center;
-  line-height: 80vh;
   white-space: normal;
+  line-height: normal !important;
 }
 
-#landing-title.landing-bg {
+#landing-title-bg {
+  height: 80vh !important;
+}
+
+#landing-title-bg.landing-bg {
   background-color: #98FB98;
   -webkit-transition: all 1s ease;
   transition: all 1s ease;
